exo: Flush keyboard keymap events properly.

This is only a problem if the keymap changes while the client is
running.

Bug: 833986
Test: weston-eventdemo
Change-Id: I239870812a9c971132c331b5f3c3f257cda72547
Reviewed-on: https://chromium-review.googlesource.com/1015507
Reviewed-by: Daniele Castagna <dcastagna@chromium.org>
Commit-Queue: David Reveman <reveman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551446}
Former-commit-id: 4ea94ad7b23bdc698f9b4021d4efaee4c3de501f